Add project section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a class="nav-link active" href="#">Aboute</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
+                <a class="nav-link" href="#portfolio">Portfolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
@@ -80,6 +80,76 @@
             </li>
         </ul>
         </div>
+  </section>
+
+  <!-- #### projects-work-section #### -->
+  <section class="container" id="portfolio">
+    <div class="container-fluid d-flex align-items-center ">
+      <div class="col">
+        <img src="images/project1.png" alt="project image" class="project-image"/>
+      </div>
+       <div class="col">
+       <h2>Tonic</h2>
+            <div class="d-flex p-lg-0 mt-4">
+              <p>RANJEET</p>
+              <p >• Back End Dev • 2021</p>
+            </div>
+            <p >
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required.
+            </p>
+            <ul class="d-flex p-lg-0 mt-3">
+              <li class="me-3 list-unstyled">html</li>
+              <li class="me-3 list-unstyled">css</li>
+              <li class="me-3 list-unstyled">javascript</li>
+            </ul>
+             <button type="button" class="btn btn-primary">See Project</button>
+      </div>
+    </div>
+    <div class="container-fluid d-flex align-items-center ">
+       <div class="col">
+       <h2>Multi-Post Stories</h2>
+            <div class="d-flex p-lg-0 mt-4">
+              <p>RANJEET</p>
+              <p >• Back End Dev • 2021</p>
+            </div>
+            <p >
+             Copy Experimental content creation feature that allows users to
+              add to an existing story over the course.
+            </p>
+            <ul class="d-flex p-lg-0 mt-3">
+              <li class="me-3 list-unstyled">html</li>
+              <li class="me-3 list-unstyled">css</li>
+              <li class="me-3 list-unstyled">javascript</li>
+            </ul>
+             <button type="button" class="btn btn-primary">See Project</button>
+      </div>
+      <div class="col">
+        <img src="images/project2.png" alt="project image" class="project-image"/>
+      </div>
+    </div>
+    <div class="container-fluid d-flex align-items-center ">
+      <div class="col">
+        <img src="images/project3.png" alt="project image" class="project-image"/>
+      </div>
+       <div class="col">
+       <h2>Facebook 360</h2>
+            <div class="d-flex p-lg-0 mt-4">
+              <p>RANJEET</p>
+              <p >• Back End Dev • 2021</p>
+            </div>
+            <p >
+             Exploring the future of media in Facebook's first Virtual Reality
+              app; a place to discover and enjoy 360 photos.
+            </p>
+            <ul class="d-flex p-lg-0 mt-3">
+              <li class="me-3 list-unstyled">html</li>
+              <li class="me-3 list-unstyled">css</li>
+              <li class="me-3 list-unstyled">javascript</li>
+            </ul>
+             <button type="button" class="btn btn-primary">See Project</button>
+      </div>
+    </div>
   </section>
 </main>
  
