Add about section -add about section -add about info -add social links with icon -add technologies

--- a/index.html
+++ b/index.html
@@ -151,6 +151,67 @@
       </div>
     </div>
   </section>
+
+  <!-- #### about-section #### -->
+  <section class="container" id="about">
+  <div class="container-fluid d-flex align-items-center mt-5">
+      <div class="col">
+       <h2>
+          About Myself </h2>
+        <p >
+          We are software developers! We can help you build a product ,<br> feature
+          or website Look through some of my work and experience!<br> If you like
+          what you see and have a project you need coded, don’t<br> hestiate to
+          contact us.
+        </p>
+        <a href="" class="text-decoration-none text-uppercase">Let's Connect</a>
+        <ul class="d-flex p-lg-0 mt-3">
+          <li class="me-3 list-unstyled">
+              <a href="https://twitter.com/thecodechaser">
+                <img src="images/twitter.svg" alt="twitter icon"/></a>
+            </li>
+            <li class="me-3 list-unstyled">
+              <a href="https://linkedin.com/in/thecodechaser">
+                <img src="images/linkedin.svg" alt="linkedin icon"/></a>
+            </li>
+            <li class="me-3 list-unstyled">
+              <a href="#">
+                <img src="images/medium.svg" alt="medium icon"/></a>
+            </li>
+            <li class="me-3 list-unstyled">
+              <a href="https://github.com/thecodechaser">
+                <img src="images/github.svg" alt="github icon"/></a>
+            </li>
+            <li class="me-3 list-unstyled">
+              <a href="#">
+                <img src="images/angellist.svg" alt="angellist icon"/></a>
+            </li>
+        </ul>
+        <button type="button" class="btn btn-primary">Get my resume</button>
+      </div>
+       <div class="col">
+       <ul class="p-lg-0 mt-3">
+            <li class="me-3 list-unstyled">Langguages<img class="down-arrow float-end" src="images/arrow-down.png" alt="right arrow"></li>
+            <div class="d-flex mt-3">
+              <div >
+                <img src="images/js.png" />
+                <p >JavaScript</p>
+              </div>
+              <div class="px-5">
+                <img src="images/html.png" />
+                <p >HTML</p>
+              </div>
+              <div >
+                <img src="images/css.png" />
+                <p >CSS</p>
+              </div>
+            </div>
+            <li class="me-3 list-unstyled mt-2">Frameworks<img class="right-arrow float-end" src="images/arrow-right.png" alt="right arrow"></li>
+            <li class="me-3 list-unstyled mt-3">Skills<img class="right-arrow float-end" src="images/arrow-right.png" alt="right arrow"></li>
+          </ul>
+      </div>
+    </div>
+    </section>
 </main>
  
 <!-- #### bootstrap javascript bundle #### -->
