--- a/index.html
+++ b/index.html
@@ -213,6 +213,37 @@
     </div>
     </section>
 </main>
+
+<!-- #### fotter-section #### -->
+<footer>
+  <section class="footer d-flex flex-column align-items-center mt-4">
+    <h2 class="color mt-4">Contact me</h2>
+          <p class="color">
+            If you have an application you are interested in developing, a
+            feature<br>that you need built or a project that needs coding. I’d love
+            to help with it
+          </p>
+          <form action="https://formspree.io/f/mayazvnq" class="d-flex flex-column align-items-center" method="post">
+            <input class="form-control mt-3 pt-3"
+            type="text"
+            name="user_name"
+            required
+            maxlength="30"
+            placeholder="Name"
+          />
+          <input class="form-control mt-3 pt-3" type="email" name="user_email" required placeholder="Email" />
+          <textarea class="form-control mt-3"
+            cols="50"
+            rows="10"
+            name="user_msg"
+            required
+            maxlength="500"
+            placeholder="Write your message here"
+          ></textarea>
+          <button class="btn btn-primary mt-3" type="submit">Get In Touch</button>
+        </form>
+  </section>
+</footer>
  
 <!-- #### bootstrap javascript bundle #### -->
     <script
